syntax = "proto3";

option go_package="../network/gRPC/topic_message";

package topic_message;

service BlockchainTopicService {
  rpc SubmitTopic(TopicRequest) returns (TopicResponse);
}

message TopicRequest {
  string topic = 1;
  int64 duration = 2;
}

message TopicResponse {
  string status = 1;
  string message = 2;
    bool success = 3;
}